--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,7 +46,7 @@ all_write=[
      # "async_glommio_write"]
 
 [dependencies]
-memmap = "0.7"
+memmap2 = "0.5"
 page_size = "0.4"
 futures = "0.3"
 glommio = "0.7"
