--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,6 @@ lto = true
 codegen-units = 1
 
 [features]
-default=[]
 seq_read=[]
 seq_read_all=[]
 seq_read_direct_all=[]
@@ -62,3 +61,4 @@ all_write=[
      "seq_mmap_write_all"]
      # "seq_glommio_write",
      # "async_glommio_write"]
+default = ["all_read", "all_write"]
