--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,10 @@ name = "iobench"
 version = "0.1.0"
 edition = "2021"
 
+[profile.release]
+lto = true
+codegen-units = 1
+
 [dependencies]
 memmap2 = "0.5"
 page_size = "0.4"
@@ -13,10 +17,6 @@ page_size = "0.4"
 libc = "0.2"
 aligned_vec = {git="https://github.com/uv-rust/aligned_vec"}
 par_seq = {git = "https://github.com/uv-rust/par_seq"}
-
-[profile.release]
-lto = true
-codegen-units = 1
 
 [features]
 seq_read=[]
@@ -79,4 +79,19 @@ all_write=[
      # "seq_glommio_write",
      # "async_glommio_write"]
 ]
-default = ["all_read", "all_write", "all_par_read"]
+par_write_all = []
+par_write_buf_all = []
+par_write_direct_all = []
+par_write_mmap_all = []
+par_write_pwrite_all = []
+par_write_vec_all = []
+all_par_write = [
+    "par_write_all",
+    "par_write_buf_all",
+    "par_write_direct_all",
+    "par_write_mmap_all",
+    "par_write_pwrite_all",
+    "par_write_vec_all"
+]
+default = []
+all = ["all_read", "all_write", "all_par_read", "all_par_write"]
